# rust-web-scraper

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  ETSY_SETUP.md  PHASE1_COMPLETE.md  QUICKSTART.md  README.md  REVIEW_EXTRACTION.md  USAGE_EXAMPLES.md  books-config.toml  config.toml  docker-compose.yml  etsy-config.toml  profiles.db
src/: api.rs  auto_selectors.rs  deep_scraper.rs  etsy.rs  etsy.rs.backup  etsy_reviews.rs.backup  learning_profile.rs  lib.rs  main.rs  rate_limit.rs  scraper.rs  structure_analyzer.rs  user_agents.rs  user_agents.rs.backup  utils.rs  web.rs
static/: app.js  index.html  style.css
