[package]
name = "rust-web-scraper"
version = "0.3.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Intelligent web scraper with automatic content detection"
license = "MIT"

[[bin]]
name = "rust-web-scraper"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "cookies"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.51", features = ["derive"] }
anyhow = "1.0.100"
toml = "0.9.8"
chrono = "0.4.42"
futures = "0.3.31"
url = "2.5.7"
actix-web = "4.11.0"
actix-files = "0.6.8"
actix-cors = "0.7.1"
rand = "0.9.2"
governor = "0.10.1"
regex = "1.12.2"
log = "0.4.28"
env_logger = "0.11.8"
